[gd_scene load_steps=17 format=2]

[ext_resource path="res://resources/Themes/ui_theme1.tres" type="Theme" id=1]
[ext_resource path="res://resources/Themes/file_dialog.tres" type="Theme" id=2]
[ext_resource path="res://offline_levels/level4/manager.gd" type="Script" id=3]
[ext_resource path="res://offline_levels/level4/popup.tscn" type="PackedScene" id=4]
[ext_resource path="res://offline_levels/general_scenes/game_over.tscn" type="PackedScene" id=5]
[ext_resource path="res://offline_levels/general_scenes/instructions.tscn" type="PackedScene" id=6]
[ext_resource path="res://nodes/level_pause.tscn" type="PackedScene" id=7]
[ext_resource path="res://inventory_system/data/resources/settings_data.tres" type="Resource" id=8]
[ext_resource path="res://resources/Themes/emergency_button.tres" type="Theme" id=9]
[ext_resource path="res://resources/soundtrack/level/submit.wav" type="AudioStream" id=10]
[ext_resource path="res://resources/Themes/instruction.tres" type="Theme" id=11]
[ext_resource path="res://resources/offline_mode_Asset/level_3/6.png" type="Texture" id=12]
[ext_resource path="res://resources/offline_mode_Asset/level_3/7.png" type="Texture" id=13]
[ext_resource path="res://scenes/others/reset_timer.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "animation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}

[node name="level4" type="Control"]
script = ExtResource( 3 )
clue_label = NodePath("clue")
score_label = NodePath("score")
lan_button = NodePath("button_container/lan_button")
man_button = NodePath("button_container/man_button")
wan_button = NodePath("button_container/wan_button")
button_container = NodePath("button_container")
question_no = NodePath("number")
explanation_label = NodePath("popup_layer/popup/main_popup/explaination")
logo_rect = NodePath("popup_layer/popup/main_popup/logo")
popup_control = NodePath("popup_layer/popup")
background = NodePath("bg")
popup_score_label = NodePath("popup_layer/game_over/main_popup/score")
game_over_popup = NodePath("popup_layer/game_over")
popup_next_button = NodePath("popup_layer/game_over/main_popup/GridContainer/next")
popup_retry_button = NodePath("popup_layer/game_over/main_popup/GridContainer/retry")
popup_indicator_label = NodePath("popup_layer/game_over/main_popup/indicator")
crowns = NodePath("popup_layer/game_over/main_popup/crowns")
gameover_anim = NodePath("popup_layer/game_over/AnimationPlayer")
celebration = NodePath("popup_layer/game_over/AnimationPlayer/Sprite")
audioplayer = NodePath("popup_layer/game_over/AudioStreamPlayer")
net1_skills = NodePath("popup_layer/game_over/main_popup/net1_skills")
coins = NodePath("popup_layer/game_over/main_popup/GridContainer2/coins")
animation_player = NodePath("popup_layer/instructions/main_popup/AnimationPlayer")
instructions_popup = NodePath("popup_layer/instructions")
instructions_sprite = NodePath("popup_layer/instructions/main_popup/AnimationPlayer/level4")
settings_data = ExtResource( 8 )

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_h_scroll2" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_v_scroll2" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_h_scroll3" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@musicSubmenu@musicPanel@_v_scroll3" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_h_scroll2" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_v_scroll2" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_h_scroll3" type="HScrollBar" parent="."]
margin_right = 12.0
margin_bottom = 12.0

[node name="popup_layer@pause@settings@videoSubmenu@videoPanel@_v_scroll3" type="VScrollBar" parent="."]
margin_right = 25.0

[node name="popup_layer" type="CanvasLayer" parent="."]

[node name="pause" parent="popup_layer" instance=ExtResource( 7 )]

[node name="popup" parent="popup_layer" instance=ExtResource( 4 )]
visible = false

[node name="game_over" parent="popup_layer" instance=ExtResource( 5 )]
visible = false

[node name="instructions" parent="popup_layer" instance=ExtResource( 6 )]

[node name="content" parent="popup_layer/instructions/main_popup" index="1"]
margin_bottom = 30.0
rect_min_size = Vector2( 900, 230 )
text = "You'll be presented with various scenarios, and your challenge is to choose the most appropriate area network type that fits each situation. If you're confident in your choice, simply tap the button corresponding to the selected area network type. Make strategic decisions to match the scenarios and network types correctly, and aim for a perfect score as you progress through the game. Best of luck!"

[node name="AnimationPlayer" parent="popup_layer/instructions/main_popup" index="2"]
playback_speed = 0.25
anims/RESET = SubResource( 3 )
anims/animation = SubResource( 4 )

[node name="Sprite" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="0"]
visible = false

[node name="level3" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="1"]
visible = false

[node name="level4" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="2"]
position = Vector2( 959, 849 )

[node name="level5" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="3"]
visible = false

[node name="level7" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="4"]
visible = false

[node name="level8" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="5"]
visible = false

[node name="level6" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="6"]
visible = false

[node name="level2" parent="popup_layer/instructions/main_popup/AnimationPlayer" index="7"]
visible = false

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = -124.0
margin_top = -34.0
margin_right = 2056.0
margin_bottom = 1117.0
texture = ExtResource( 12 )

[node name="bg" type="NinePatchRect" parent="."]
margin_left = -3.0
margin_top = 73.0
margin_right = 1860.0
margin_bottom = 1061.0
texture = ExtResource( 13 )

[node name="Question" type="Label" parent="."]
margin_left = 630.0
margin_top = 85.0
margin_right = 1069.0
margin_bottom = 153.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Question #"

[node name="number" type="Label" parent="."]
margin_left = 1089.0
margin_top = 83.0
margin_right = 1129.0
margin_bottom = 151.0
theme = ExtResource( 1 )
text = "0"

[node name="score_board" type="Label" parent="."]
margin_left = 29.0
margin_top = 157.0
margin_right = 329.0
margin_bottom = 220.0
rect_min_size = Vector2( 300, 50 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score:     / 5"
autowrap = true

[node name="score" type="Label" parent="."]
margin_left = 168.0
margin_top = 158.0
margin_right = 208.0
margin_bottom = 213.0
rect_min_size = Vector2( 40, 50 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
autowrap = true

[node name="clue" type="Label" parent="."]
margin_left = 348.0
margin_top = 233.0
margin_right = 1550.0
margin_bottom = 485.0
rect_min_size = Vector2( 1000, 150 )
theme = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CLUE"
autowrap = true

[node name="button_container" type="GridContainer" parent="."]
margin_left = 277.0
margin_top = 757.0
margin_right = 1277.0
margin_bottom = 957.0
rect_min_size = Vector2( 900, 200 )
rect_scale = Vector2( 1.3, 1.2 )
custom_constants/hseparation = 200
columns = 3

[node name="lan_button" type="Button" parent="button_container"]
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
focus_mode = 0
theme = ExtResource( 9 )
text = "LAN"
icon_align = 1

[node name="man_button" type="Button" parent="button_container"]
margin_left = 400.0
margin_right = 600.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
focus_mode = 0
theme = ExtResource( 9 )
text = "MAN"

[node name="wan_button" type="Button" parent="button_container"]
margin_left = 800.0
margin_right = 1000.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
focus_mode = 0
theme = ExtResource( 9 )
text = "WAN"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "SFX"

[node name="instruction" type="Button" parent="."]
margin_left = 1811.0
margin_top = 969.0
margin_right = 1911.0
margin_bottom = 1069.0
theme = ExtResource( 11 )

[node name="manager" parent="." instance=ExtResource( 14 )]

[connection signal="pressed" from="popup_layer/popup/continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="popup_layer/game_over/main_popup/GridContainer/next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="popup_layer/instructions/tap" to="." method="_on_tap_pressed"]
[connection signal="pressed" from="button_container/lan_button" to="." method="_on_lan_button_pressed"]
[connection signal="pressed" from="button_container/man_button" to="." method="_on_man_button_pressed"]
[connection signal="pressed" from="button_container/wan_button" to="." method="_on_wan_button_pressed"]
[connection signal="pressed" from="instruction" to="." method="_on_instruction_pressed"]

[editable path="popup_layer/pause"]
[editable path="popup_layer/pause/CanvasLayer/settings"]
[editable path="popup_layer/popup"]
[editable path="popup_layer/game_over"]
[editable path="popup_layer/instructions"]
